--- a/index.html
+++ b/index.html
@@ -151,6 +151,167 @@
             </ul>
         </div>
     </section>
+
+    <section class="dish">
+        <div class="container dish_container">
+            <div class="dish_center">
+                <h2 class="dish_header">Dish Of The Day</h2>
+                <div class="dish_line"></div>
+            </div>
+
+            <ul class="dish_list">
+                <li class="dish_item">
+                    <img class="dish_img" src="./images/card_images.png" alt="dish">
+                    <h3 class="dish_item-header">Featured Meal</h3>
+                    <p class="dish_item-text">Served with french fries + drink</p>
+                    <p class="dish_item-choise">
+                        Choice of: Coke, Fanta, Sprite, Upgrade to large fries, Add whopper
+                        patty, Add Tender crisp patty and more...
+                    </p>
+                    <div class="dish_list-star">
+                        <img class="dish_list-img" src="./images/stars.svg" alt="star">
+                        <p class="dish_list-number">12</p>
+                        <button class="dish_list-button">ORDER</button>
+                    </div>
+                </li>
+
+                <li class="dish_item">
+                    <img class="dish_img" src="./images/card_2.png" alt="dish">
+                    <h3 class="dish_item-header">Featured Meal</h3>
+                    <p class="dish_item-text">Served with french fries + drink</p>
+                    <p class="dish_item-choise">
+                        Choice of: Coke, Fanta, Sprite, Upgrade to large fries, Add whopper
+                        patty, Add Tender crisp patty and more...
+                    </p>
+                    <div class="dish_list-star">
+                        <img class="dish_list-img" src="./images/stars_none.svg" alt="star">
+                        <p class="dish_list-number">12</p>
+                        <button class="dish_list-bt">ORDER</button>
+                    </div>
+                </li>
+
+                <li class="dish_item">
+                    <img class="dish_img" src="./images/card_3.png" alt="dish">
+                    <h3 class="dish_item-header">Featured Meal</h3>
+                    <p class="dish_item-text">Served with french fries + drink</p>
+                    <p class="dish_item-choise">
+                        Choice of: Coke, Fanta, Sprite, Upgrade to large fries, Add whopper
+                        patty, Add Tender crisp patty and more...
+                    </p>
+                    <div class="dish_list-star">
+                        <img class="dish_list-img" src="./images/stars_none.svg" alt="star">
+                        <p class="dish_list-number">12</p>
+                        <button class="dish_list-bt">ORDER</button>
+                    </div>
+                </li>
+
+                <li class="dish_item">
+                    <img class="dish_img" src="./images/card_4.png" alt="dish">
+                    <h3 class="dish_item-header">Featured Meal</h3>
+                    <p class="dish_item-text">Served with french fries + drink</p>
+                    <p class="dish_item-choise">
+                        Choice of: Coke, Fanta, Sprite, Upgrade to large fries, Add whopper
+                        patty, Add Tender crisp patty and more...
+                    </p>
+                    <div class="dish_list-star">
+                        <img class="dish_list-img" src="./images/stars_none.svg" alt="star">
+                        <p class="dish_list-number">12</p>
+                        <button class="dish_list-bt">ORDER</button>
+                    </div>
+                </li>
+
+                <li class="dish_item">
+                    <img class="dish_img" src="./images/card_5.png" alt="dish">
+                    <h3 class="dish_item-header">Featured Meal</h3>
+                    <p class="dish_item-text">Served with french fries + drink</p>
+                    <p class="dish_item-choise">
+                        Choice of: Coke, Fanta, Sprite, Upgrade to large fries, Add whopper
+                        patty, Add Tender crisp patty and more...
+                    </p>
+                    <div class="dish_list-star">
+                        <img class="dish_list-img" src="./images/stars_none.svg" alt="star">
+                        <p class="dish_list-number">12</p>
+                        <button class="dish_list-bt">ORDER</button>
+                    </div>
+                </li>
+
+                <li class="dish_item">
+                    <img class="dish_img" src="./images/card_6.png" alt="dish">
+                    <h3 class="dish_item-header">Featured Meal</h3>
+                    <p class="dish_item-text">Served with french fries + drink</p>
+                    <p class="dish_item-choise">
+                        Choice of: Coke, Fanta, Sprite, Upgrade to large fries, Add whopper
+                        patty, Add Tender crisp patty and more...
+                    </p>
+                    <div class="dish_list-star">
+                        <img class="dish_list-img" src="./images/stars.svg" alt="star">
+                        <p class="dish_list-number">12</p>
+                        <button class="dish_list-button">ORDER</button>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </section>
+
+    <section class="wrap">
+        <div class="container wrap_container">
+            <div class="wrap_center">
+                <h2 class="wrap_header">This month's chefs</h2>
+                <div class="wrap_line"></div>
+            </div>
+            <ul class="wrap_list">
+                <li class="wrap_item">
+                    <div class="wrap_item-dispaly">
+                        <div class="wrap_left">
+                            <img class="warp_img" src="./images/gregory.jpg" alt="men">
+                        </div>
+                        <div class="wrap_display">
+                            <h3 class="wrap_item-header">Gregory Flores</h3>
+                            <p class="wrap_text">Chef of the cold</p>
+                        </div>
+                    </div>
+                    <div class="wrap_img-all">
+                        <img src="./images/big_wrap-img.png" alt="">
+                        <img src="./images/wrap_1.png" alt="">
+                        <img src="./images/wrap_1.png" alt="">
+                    </div>
+                </li>
+                <li class="wrap_item">
+                    <div class="wrap_item-dispaly">
+                        <div class="wrap_left">
+                            <img class="warp_img" src="./images/Annete.png" alt="men">
+                        </div>
+                        <div class="wrap_display">
+                            <h3 class="wrap_item-header">Gregory Flores</h3>
+                            <p class="wrap_text">Chef of the cold</p>
+                        </div>
+                    </div>
+                    <div class="wrap_img-all">
+                        <img src="./images/annete_2.png" alt="">
+                        <img src="./images/annete_3.png" alt="">
+                        <img src="./images/annete_4.png" alt="">
+                    </div>
+                </li>
+                <li class="wrap_item">
+                    <div class="wrap_item-dispaly">
+                        <div class="wrap_left">
+                            <img class="warp_img" src="./images/Greg.png" alt="men">
+                        </div>
+                        <div class="wrap_display">
+                            <h3 class="wrap_item-header">Gregory Flores</h3>
+                            <p class="wrap_text">Chef of the cold</p>
+                        </div>
+                    </div>
+                    <div class="wrap_img-all">
+                        <img src="./images/greg_2.png" alt="">
+                        <img src="./images/greg_3.png" alt="">
+                        <img src="./images/greg_4.png" alt="">
+                    </div>
+                </li>
+                
+            </ul>
+        </div>
+    </section>
 </body>
 
 </html>
