--- a/index.html
+++ b/index.html
@@ -308,10 +308,175 @@
                         <img src="./images/greg_4.png" alt="">
                     </div>
                 </li>
-                
+
             </ul>
         </div>
     </section>
+
+    <section class="our">
+        <div class="container our_container">
+            <div class="our_center">
+                <h2 class="our_header">
+                    Recipes From Our Chefs
+                </h2>
+                <div class="our_line"></div>
+            </div>
+            <div class="our_all">
+                <div class="our_left">
+                    <button class="our_button">breakfast</button>
+                    <p class="our_time">05 Jul 2016</p>
+                    <p class="our_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                    <h3 class="our_left-header">Jason Keller</h3>
+
+                    <div class="our_left-display">
+                        <img src="./images/eyes.png" alt="eyes" width="22" height="15">
+                        <p class="our_left-number">275</p>
+                        <img src="./images/messages.png" alt="messages" width="20" height="20">
+                        <p class="our_left-number">12</p>
+                    </div>
+                </div>
+
+                <div class="our_right">
+                    <div class="our_right-card">
+                        <p class="our_right-text">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                            eiusmod tempor incididunt ut
+                        </p>
+                        <div class="our_right-all">
+                            <div class="our_right-display">
+                                <button class="our_right-bt">lunch</button>
+                                <p class="our_right-time">07 Jan 2016</p>
+                            </div>
+                            <div class="our_right-message">
+                                <img src="./images/eyes.png" alt="eyes" width="22" height="15">
+                                <p class="our_left-number">275</p>
+                                <img src="./images/messages.png" alt="messages" width="20" height="20">
+                                <p class="our_left-number">12</p>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="our_right-card card">
+                        <p class="our_right-text">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                            eiusmod tempor incididunt ut
+                        </p>
+                        <div class="our_right-all">
+                            <div class="our_right-display">
+                                <button class="our_right-bt">lunch</button>
+                                <p class="our_right-time">07 Jan 2016</p>
+                            </div>
+                            <div class="our_right-message">
+                                <img src="./images/eyes.png" alt="eyes" width="22" height="15">
+                                <p class="our_left-number">275</p>
+                                <img src="./images/messages.png" alt="messages" width="20" height="20">
+                                <p class="our_left-number">12</p>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="our_right-card card-color">
+                        <p class="our_right-text">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                            eiusmod tempor incididunt ut
+                        </p>
+                        <div class="our_right-all">
+                            <div class="our_right-display">
+                                <button class="our_right-bt">lunch</button>
+                                <p class="our_right-time">07 Jan 2016</p>
+                            </div>
+                            <div class="our_right-message">
+                                <img src="./images/eyes.png" alt="eyes" width="22" height="15">
+                                <p class="our_left-number">275</p>
+                                <img src="./images/messages.png" alt="messages" width="20" height="20">
+                                <p class="our_left-number">12</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="social">
+        <div class="container social_container">
+            <div class="social_center">
+                <h2 class="social_header">We in Social</h2>
+                <div class="social_line"></div>
+            </div>
+
+            <ul class="social_list">
+                <li class="social_item">
+                    <div class="social_display">
+                        <img src="./images/Twitter.png" alt="twitter" width="40" height="40">
+                        <p class="social_text">Twitter</p>
+                        <button class="social_button">follow us</button>
+                    </div>
+                    <div class="social_hr"></div>
+                    <p class="social_time">24 Jun at 16:20 pm</p>
+                    <p class="social_item-text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut Lorem ipsum dolor sit amet, consectetur adipiscing
+                    </p>
+                    <a class="social_link" href="#">@DennisFerguson</a>
+                </li>
+
+                <li class="social_item">
+                    <div class="social_display">
+                        <img src="./images/Instagram.png" alt="twitter" width="40" height="40">
+                        <p class="social_text">Instagram</p>
+                        <button class="social_button">follow us</button>
+                    </div>
+
+                    <div class="social_images"></div>
+
+                </li>
+
+                <li class="social_item">
+                    <div class="social_display">
+                        <img src="./images/Facebook.png" alt="twitter" width="40" height="40">
+                        <p class="social_text">Facebooks</p>
+                        <button class="social_button">follow us</button>
+                    </div>
+                    <div class="social_hr"></div>
+                    <p class="social_time">24 Jun at 16:20 pm</p>
+                    <p class="social_item-text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut Lorem ipsum dolor sit amet, consectetur adipiscing
+                    </p>
+                </li>
+            </ul>
+        </div>
+    </section>
+
+    <section class="switcher">
+        <div class="container">
+            <ul class="hero_list switcher_top">
+                <li class="hero_item">
+                    <img class="hero_img" src="./images/watch.png" alt="watch" width="20" height="20">
+                    <h2 class="hero_item-header">Today 10:00 am - 7:00 pm</h2>
+                    <a class="hero_item-text" href="#">Working hours</a>
+                </li>
+                <li class="hero_item">
+                    <img class="hero_img" src="./images/telegram.png" alt="telegram" width="20" height="20">
+                    <h2 class="hero_item-header">Velyka Vasylkivska 100</h2>
+                    <a class="hero_item-text" href="#">Get Directions</a>
+                </li>
+                <li class="hero_item">
+                    <img class="hero_img" src="./images/call.png" alt="call" width="20" height="20">
+                    <h2 class="hero_item-header">+38 (063)833 24 15</h2>
+                    <a class="hero_item-text" href="#">Call Online</a>
+                </li>
+            </ul>
+            <div class="switcher_line"></div>
+            <div class="switcher_center">
+                <img src="./images/content.png" alt="">
+                <a class="switcher_link" href="#">© Designed by Yellow Snow. All Rights Reserved. </a>
+            </div>
+        </div>
+    </section>
+
+
 </body>
 
 </html>
